fix: alignment and text wrapping in Errors tab (#3078)

--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
@@ -36,7 +36,6 @@
 }
 
 .vertex-error-common-title-text {
-  width: 25rem;
   font-weight: 600;
   color: #878789;
   font-size: 1.6rem;
